image/font placeholder + java 26 + LWJGL3 +¨forks exploration